fix(css): Fixed scrollbar causing page to jump

--- a/Covalence/ClientApp/app/app.scss
+++ b/Covalence/ClientApp/app/app.scss
@@ -63,3 +63,10 @@ article.banner {
 .menu-list a {
     background-color: white;
 }
+
+@media screen and (min-width: 960px) {
+    html {
+        margin-left: calc(100vw - 100%);
+        margin-right: 0;
+    }
+}
